objects/PMC_CPQ_QLEFieldsConditionality__mdt.object
<CustomObject>
    <fields>
        <fullName>PMC_CPQ_Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SubType__c</fullName>
        <label>Sub-Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>QLE Fields Conditionality</label>
    <pluralLabel>QLE Fields Conditionalities</pluralLabel>
</CustomObject>